C2CUDATranslator/PatternGeneratorParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g 2012-04-04 13:55:31

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162




using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;


using Antlr.StringTemplate;
using Antlr.StringTemplate.Language;
using Hashtable = System.Collections.Hashtable;
public partial class PatternGeneratorParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"ID", 
		"INT", 
		"Keyword", 
		"ARRAY", 
		"RWORD", 
		"STRING_LITERAL", 
		"WS", 
		"CHARS", 
		"LINE_COMMENT", 
		"COMMENT", 
		"EscapeSequence", 
		"CHARACTER_LITERAL", 
		"OctalEscape", 
		"';'", 
		"'.'", 
		"'kernel'", 
		"'('", 
		"','", 
		"')'", 
		"'int'", 
		"'char'", 
		"'float'", 
		"'bool'", 
		"'void'", 
		"'double'", 
		"'size_t'", 
		"'cudaDeviceProp'", 
		"'#include'", 
		"'__global__'", 
		"'__device__'", 
		"'__shared__'", 
		"'{'", 
		"'}'", 
		"'*'", 
		"'='", 
		"'+'", 
		"'for'", 
		"'-='", 
		"'+='", 
		"'printf('", 
		"'fprintf('", 
		"'default'", 
		"':'", 
		"'return'", 
		"'while'", 
		"'if'", 
		"'else'", 
		"'++'", 
		"'--'", 
		"'*='", 
		"'=='", 
		"'!='", 
		"'<'", 
		"'>'", 
		"'<='", 
		"'>='", 
		"'&&'", 
		"'||'", 
		"'-'", 
		"'/'", 
		"'%'", 
		"'['", 
		"']'"
    };

    public const int T__66 = 66;
    public const int T__64 = 64;
    public const int T__29 = 29;
    public const int T__65 = 65;
    public const int T__28 = 28;
    public const int RWORD = 8;
    public const int T__62 = 62;
    public const int T__27 = 27;
    public const int T__63 = 63;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int T__24 = 24;
    public const int T__23 = 23;
    public const int T__22 = 22;
    public const int T__21 = 21;
    public const int T__20 = 20;
    public const int ID = 4;
    public const int T__61 = 61;
    public const int T__60 = 60;
    public const int EOF = -1;
    public const int T__55 = 55;
    public const int T__19 = 19;
    public const int T__56 = 56;
    public const int T__57 = 57;
    public const int T__58 = 58;
    public const int STRING_LITERAL = 9;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int T__18 = 18;
    public const int T__53 = 53;
    public const int T__17 = 17;
    public const int T__54 = 54;
    public const int T__59 = 59;
    public const int COMMENT = 13;
    public const int T__50 = 50;
    public const int ARRAY = 7;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int Keyword = 6;
    public const int T__41 = 41;
    public const int T__46 = 46;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int LINE_COMMENT = 12;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int CHARACTER_LITERAL = 15;
    public const int INT = 5;
    public const int T__30 = 30;
    public const int T__31 = 31;
    public const int T__32 = 32;
    public const int WS = 10;
    public const int T__33 = 33;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int CHARS = 11;
    public const int OctalEscape = 16;
    public const int EscapeSequence = 14;

    // delegates
    // delegators

    protected class slist_scope 
    {
        protected internal IList locals;
        protected internal // must be defined one per semicolon
            IList stats;
    }
    protected Stack slist_stack = new Stack();



        public PatternGeneratorParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public PatternGeneratorParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("PatternGeneratorParserTemplates", typeof(AngleBracketTemplateLexer));

    public StringTemplateGroup TemplateLib
    {
     	get { return this.templateLib; }
     	set { this.templateLib = value; }
    }

    /// <summary> Allows convenient multi-value initialization:
    ///  "new STAttrMap().Add(...).Add(...)"
    /// </summary>
    protected class STAttrMap : Hashtable
    {
      public STAttrMap Add(string attrName, object value) 
      {
        base.Add(attrName, value);
        return this;
      }
      public STAttrMap Add(string attrName, int value) 
      {
        base.Add(attrName, value);
        return this;
      }
    }

    override public string[] TokenNames {
		get { return PatternGeneratorParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g"; }
    }


        public string ArraytoString(ArrayList index1,String Separator)
                {
                    string a = string.Empty ;
                    int i;
                    for (i = 0; i < index1.Count; i++)
                    {
                        a += index1[i];
                        if(i!=index1.Count-1)
                        {
                        	a+=Separator;
                        }
                    }
                    return a;
                }
    		


    protected class pattern_scope 
    {
        protected internal IList globals;
        protected internal IList functions;
        protected internal IList kernelvars;
        protected internal IList includes;
        protected internal IList mainstats;
        protected internal IList kernelcopyin;
        protected internal IList kernelcopyout;
        protected internal IList kernelalloc;
        protected internal IList kernelvarfree;
        protected internal IList kernelvarsize;
        protected internal String kernelpar;
        protected internal String kernelpar2;
        protected internal String temp;
    }
    protected Stack pattern_stack = new Stack();

    public class pattern_return : ParserRuleReturnScope
    {
        private StringTemplate st;
        public StringTemplate ST    { get { return st; } set { st = value; } }
        public override object Template 		{ get { return st; } }
        public override string ToString() 		{ return (st == null) ? null : st.ToString(); }
    };

    // $ANTLR start "pattern"
    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:33:1: pattern : ( declaration )+ -> pattern(kernelfunction=$pattern::functions);
    public PatternGeneratorParser.pattern_return pattern() // throws RecognitionException [1]
    {   
        pattern_stack.Push(new pattern_scope());
        PatternGeneratorParser.pattern_return retval = new PatternGeneratorParser.pattern_return();
        retval.Start = input.LT(1);


          ((pattern_scope)pattern_stack.Peek()).globals =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).functions =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).includes =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).mainstats =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).kernelvars =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).kernelcopyin =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).kernelcopyout =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).kernelalloc =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).kernelvarfree =  new ArrayList();
          ((pattern_scope)pattern_stack.Peek()).kernelvarsize =  new ArrayList();


        try 
    	{
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:63:5: ( ( declaration )+ -> pattern(kernelfunction=$pattern::functions))
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:63:9: ( declaration )+
            {
            	// Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:63:9: ( declaration )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( ((LA1_0 >= 32 && LA1_0 <= 34)) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:63:9: declaration
            			    {
            			    	PushFollow(FOLLOW_declaration_in_pattern62);
            			    	declaration();
            			    	state.followingStackPointer--;


            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements



            	// TEMPLATE REWRITE
            	// 64:7: -> pattern(kernelfunction=$pattern::functions)
            	{
            	    retval.ST = templateLib.GetInstanceOf("pattern",
            	  new STAttrMap().Add("kernelfunction", ((pattern_scope)pattern_stack.Peek()).functions));
            	}


            }

            retval.Stop = input.LT(-1);

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            pattern_stack.Pop();
        }
        return retval;
    }
    // $ANTLR end "pattern"

    public class declaration_return : ParserRuleReturnScope
    {
        private StringTemplate st;
        public StringTemplate ST    { get { return st; } set { st = value; } }
        public override object Template 		{ get { return st; } }
        public override string ToString() 		{ return (st == null) ? null : st.ToString(); }
    };

    // $ANTLR start "declaration"
    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:67:5: declaration : kernelfunction ;
    public PatternGeneratorParser.declaration_return declaration() // throws RecognitionException [1]
    {   
        PatternGeneratorParser.declaration_return retval = new PatternGeneratorParser.declaration_return();
        retval.Start = input.LT(1);

        PatternGeneratorParser.kernelfunction_return kernelfunction1 = default(PatternGeneratorParser.kernelfunction_return);


        try 
    	{
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:68:6: ( kernelfunction )
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:69:5: kernelfunction
            {
            	PushFollow(FOLLOW_kernelfunction_in_declaration109);
            	kernelfunction1 = kernelfunction();
            	state.followingStackPointer--;

            	((pattern_scope)pattern_stack.Peek()).functions.Add(((kernelfunction1 != null) ? kernelfunction1.ST : null));

            }

            retval.Stop = input.LT(-1);

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "declaration"

    public class variable_return : ParserRuleReturnScope
    {
        private StringTemplate st;
        public StringTemplate ST    { get { return st; } set { st = value; } }
        public override object Template 		{ get { return st; } }
        public override string ToString() 		{ return (st == null) ? null : st.ToString(); }
    };

    // $ANTLR start "variable"
    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:80:1: variable : ( type declarator ';' -> variable(type=$type.stname=$declarator.st) | type arraydeclarator ';' -> variable(type=$type.stname=$arraydeclarator.st));
    public PatternGeneratorParser.variable_return variable() // throws RecognitionException [1]
    {   
        PatternGeneratorParser.variable_return retval = new PatternGeneratorParser.variable_return();
        retval.Start = input.LT(1);

        PatternGeneratorParser.type_return type2 = default(PatternGeneratorParser.type_return);

        PatternGeneratorParser.declarator_return declarator3 = default(PatternGeneratorParser.declarator_return);

        PatternGeneratorParser.type_return type4 = default(PatternGeneratorParser.type_return);

        PatternGeneratorParser.arraydeclarator_return arraydeclarator5 = default(PatternGeneratorParser.arraydeclarator_return);


        try 
    	{
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:81:5: ( type declarator ';' -> variable(type=$type.stname=$declarator.st) | type arraydeclarator ';' -> variable(type=$type.stname=$arraydeclarator.st))
            int alt2 = 2;
            alt2 = dfa2.Predict(input);
            switch (alt2) 
            {
                case 1 :
                    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:81:9: type declarator ';'
                    {
                    	PushFollow(FOLLOW_type_in_variable142);
                    	type2 = type();
                    	state.followingStackPointer--;

                    	PushFollow(FOLLOW_declarator_in_variable145);
                    	declarator3 = declarator();
                    	state.followingStackPointer--;

                    	Match(input,17,FOLLOW_17_in_variable147); 


                    	// TEMPLATE REWRITE
                    	// 82:9: -> variable(type=$type.stname=$declarator.st)
                    	{
                    	    retval.ST = templateLib.GetInstanceOf("variable",
                    	  new STAttrMap().Add("type", ((type2 != null) ? type2.ST : null)).Add("name", ((declarator3 != null) ? declarator3.ST : null)));
                    	}


                    }
                    break;
                case 2 :
                    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:83:10: type arraydeclarator ';'
                    {
                    	PushFollow(FOLLOW_type_in_variable179);
                    	type4 = type();
                    	state.followingStackPointer--;

                    	PushFollow(FOLLOW_arraydeclarator_in_variable181);
                    	arraydeclarator5 = arraydeclarator();
                    	state.followingStackPointer--;

                    	Match(input,17,FOLLOW_17_in_variable183); 


                    	// TEMPLATE REWRITE
                    	// 84:9: -> variable(type=$type.stname=$arraydeclarator.st)
                    	{
                    	    retval.ST = templateLib.GetInstanceOf("variable",
                    	  new STAttrMap().Add("type", ((type4 != null) ? type4.ST : null)).Add("name", ((arraydeclarator5 != null) ? arraydeclarator5.ST : null)));
                    	}


                    }
                    break;

            }
            retval.Stop = input.LT(-1);

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "variable"

    public class statement_return : ParserRuleReturnScope
    {
        private StringTemplate st;
        public StringTemplate ST    { get { return st; } set { st = value; } }
        public override object Template 		{ get { return st; } }
        public override string ToString() 		{ return (st == null) ? null : st.ToString(); }
    };

    // $ANTLR start "statement"
    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:87:1: statement : stat -> type(name=$stat.st);
    public PatternGeneratorParser.statement_return statement() // throws RecognitionException [1]
    {   
        PatternGeneratorParser.statement_return retval = new PatternGeneratorParser.statement_return();
        retval.Start = input.LT(1);

        PatternGeneratorParser.stat_return stat6 = default(PatternGeneratorParser.stat_return);


        try 
    	{
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:88:1: ( stat -> type(name=$stat.st))
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:88:8: stat
            {
            	PushFollow(FOLLOW_stat_in_statement226);
            	stat6 = stat();
            	state.followingStackPointer--;



            	// TEMPLATE REWRITE
            	// 88:13: -> type(name=$stat.st)
            	{
            	    retval.ST = templateLib.GetInstanceOf("type",
            	  new STAttrMap().Add("name", ((stat6 != null) ? stat6.ST : null)));
            	}


            }

            retval.Stop = input.LT(-1);

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "statement"

    public class statement_list_return : ParserRuleReturnScope
    {
        private StringTemplate st;
        public StringTemplate ST    { get { return st; } set { st = value; } }
        public override object Template 		{ get { return st; } }
        public override string ToString() 		{ return (st == null) ? null : st.ToString(); }
    };

    // $ANTLR start "statement_list"
    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:91:1: statement_list : ( statement )+ ;
    public PatternGeneratorParser.statement_list_return statement_list() // throws RecognitionException [1]
    {   
        PatternGeneratorParser.statement_list_return retval = new PatternGeneratorParser.statement_list_return();
        retval.Start = input.LT(1);

        try 
    	{
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:92:2: ( ( statement )+ )
            // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:92:4: ( statement )+
            {
            	// Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:92:4: ( statement )+
            	int cnt3 = 0;
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);

            	    if ( ((LA3_0 >= ID && LA3_0 <= INT) || (LA3_0 >= ARRAY && LA3_0 <= RWORD) || LA3_0 == 17 || (LA3_0 >= 19 && LA3_0 <= 20) || (LA3_0 >= 23 && LA3_0 <= 31) || LA3_0 == 35 || LA3_0 == 40 || (LA3_0 >= 43 && LA3_0 <= 45) || (LA3_0 >= 47 && LA3_0 <= 50) || LA3_0 == 65) )
            	    {
            	        alt3 = 1;
            	    }


            	    switch (alt3) 
            		{
            			case 1 :
            			    // Z:\\C2CUDATranslator\\C2CUDATranslator\\PatternGenerator.g:92:4: statement
            			    {
            			    	PushFollow(FOLLOW_statement_in_statement_list246);
            			    	statement();
            			    	state.followingStackPointer--;


            			    }
            			    break;

